# ml-product

./: .env.example  .flake8  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
server/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
server/ml_api/: celery_worker.py  config.py  main.py
server/ml_api/apps/compositions/: composition_construstor.py  composition_trainer.py  models.py
server/ml_api/apps/csv/: models.py  repository.py  routers.py  schemas.py  services.py
server/ml_api/apps/dataframes/: errors.py  facade.py  model.py  models.py  repository.py  routers.py  schemas.py  services.py  specs.py  utils.py
server/ml_api/apps/dataframes/controller/: routers.py  schemas.py
server/ml_api/apps/dataframes/repositories/: file_repository.py  meta_repository.py  repository_manager.py
server/ml_api/apps/dataframes/repository/: models.py  repository.py
server/ml_api/apps/dataframes/service/: function_service.py  function_service_RAW.py  services.py  utils.py
server/ml_api/apps/document/: models.py  repository.py  routers.py  schemas.py  services.py
server/ml_api/apps/documents/: models.py  repository.py  routers.py  schemas.py  services.py
server/ml_api/apps/jobs/: errors.py  model.py  repository.py  routers.py  services.py  specs.py
server/ml_api/apps/ml_models/: errors.py  facade.py  model.py  models.py  repository.py  routers.py  schemas.py  services.py  specs.py  utils.py
server/ml_api/apps/training_reports/: errors.py  model.py  repository.py  routers.py  schemas.py  services.py  specs.py
server/ml_api/apps/users/: model.py  models.py  repository.py  routers.py  schemas.py  services.py
server/ml_api/common/: celery_tasks.py  config.py  mongo_config.py  postgre_config.py
server/ml_api/common/celery_tasks/: celery_tasks.py  celery_worker.py  schemas.py
server/ml_api/common/database/: __init__.py  db_deps.py  db_session_manager.py  mongo_manager.py  users_deps.py
server/ml_api/common/db/: __init__.py  session.py
server/ml_api/common/dependencies/: db_deps.py  pub_sub.py
server/ml_api/common/file_manager/: base.py
server/ml_api/common/jobs_manager/: base.py
server/ml_api/common/logging/: logger.py  logging.yaml
server/ml_api/common/models/: base.py
server/ml_api/common/pubsub/: client.py  token_utils.py
server/ml_api/common/schemas/: base.py
server/ml_api/common/security/: token_utils.py
server/ml_api/common/workers/: celery_worker.py
server/old_ml_code/: README.md
server/old_ml_code/code/: dictionaries.py  main.py  main_upload_mode.py
server/old_ml_code/code/fitting/: learning.py  predicting.py
server/old_ml_code/code/preprocessing/: feature_selection.py  missing_values_imputing.py  normalization.py  outliers_deleting.py
server/old_ml_code/code/report/: create_doc.py  get_images.py
(+251 files in other folders)
