[tool.poetry]
name = "ml-product"
version = "0.1.0"
description = ""
authors = ["Kirill Kosvintsev <kosvintsevke@yandex.ru>"]

[tool.poetry.dependencies]
pandas= "1.3.3"
scikit-learn = "1.0.2"
python = "^3.9"
uvicorn = {extras = ["standard"], version = "0.16.0"}
fastapi = "0.70.1"
SQLAlchemy = "1.4.26"
pydantic = "1.9.0"
psycopg2-binary = "2.9.1"
fastapi-users={extras = ["sqlalchemy"], version = "10.0.6"}
python-multipart = "0.0.5"
gunicorn = "^20.1.0"
asyncpg = "0.24.0"
alembic = "1.7.7"
celery = {extras = ["redis"], version = "^5.2.7"}
websockets = "10.4"
outlier_utils = "0.0.3"
pickleshare = "0.7.5"
sympy = "1.10.1"
hyperopt = "0.2.7"
cent = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.8.0", allow-prereleases = true}
flake8 = "^5.0.4"

[tool.poe.tasks]
catboost_install = "pip3 install catboost"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99 # override black's default line-length

[tool.isort]
# make it compatible with black
profile = "black"
lines_after_imports = 2
