[tool.poetry]
name = "ml-product"
version = "0.1.0"
description = ""
authors = ["Kirill Kosvintsev <tg:@kosvintsevke>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas= "^1.3.3"
scikit-learn = "1.1.1"
uvicorn = {extras = ["standard"], version = "0.16.0"}
fastapi = "^0.70.1"
pydantic = "^1.9.0"
fastapi-users={extras = ["beanie"], version = "10.0.6"}
python-multipart = "0.0.5"
gunicorn = "^20.1.0"
websockets = "10.4"
pickleshare = "0.7.5"
sympy = "^1.10.1"
hyperopt = "^0.2.7"
cent = "^4.1.0"
starlette = "^0.16.0"
pymongo = "^4.3.3"
beanie = "^1.19.2"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
catboost = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
